--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ colorama==0.4.3
 cycler==0.10.0
 discord==1.0.1
 discord.py==1.3.3
+dropbox==10.2.0
 future==0.18.2
 google==2.0.3
 google-api-core==1.21.0
